// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overrides should allow to add overrides 1`] = `
[
  FieldOverride {
    "construct": undefined,
    "id": undefined,
    "onChange": undefined,
    "priority": 0,
    "props": {},
    "render": undefined,
    "targets": [],
    "type": "field",
  },
  ComponentOverride {
    "construct": undefined,
    "deserialize": undefined,
    "disallow": [],
    "duplicate": undefined,
    "editable": undefined,
    "fields": [],
    "getContainers": undefined,
    "id": undefined,
    "priority": 0,
    "render": undefined,
    "sanitize": undefined,
    "serialize": undefined,
    "targets": [
      "foo",
    ],
    "type": "component",
  },
]
`;

exports[`Overrides should allow to get an override 1`] = `
ComponentOverride {
  "construct": undefined,
  "deserialize": undefined,
  "disallow": [],
  "duplicate": undefined,
  "editable": undefined,
  "fields": [],
  "getContainers": undefined,
  "id": undefined,
  "priority": 0,
  "render": undefined,
  "sanitize": undefined,
  "serialize": undefined,
  "targets": [
    "foo",
  ],
  "type": "component",
}
`;

exports[`Overrides should alow to merge overrides 1`] = `
{
  "construct": [Function],
  "disallow": [],
  "fields": [],
  "priority": 0,
  "targets": [
    "foo",
  ],
  "type": "component",
}
`;
